--- a/settings.json
+++ b/settings.json
@@ -144,5 +144,5 @@
     "schemes": [],
     "tabWidthMode": "titleLength",
     "themes": [],
-    "useAcrylicInTabRow": true
+    "useAcrylicInTabRow": false
 }
